Code cleanup: use modern factory methods (#115)
* Replace Collections.emptyList() with List.of()
* Replace Collections.emptyMap() with Map.of()
* Use ConcurrentHashMap instead of synchronizedMap
* Remove several "empty" javadocs

Part of #107